--- a/src/info.html
+++ b/src/info.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container mx-auto py-14">
         <a href="/" class="underline text-gray-500 text-2xl pl-12 mb-4">Back</a>
-        <div class="bg-blue-400 text-white px-10 py-10 text-lg shadow-xl rounded-lg mx-6" data-aos="fade-right">
+        <div style="color:red;" data-aos="fade-right">
             Let me tell you a bit about how mattresses are manufactured.
 
 The most active chemical in the making of foams is Polyurethanes, this single chemical when wrongly handled is what could lead to cancer and might be responsible for the increased cancer numbers recently reported.
