--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ClementOnobun</title>
-    <link rel="stylesheet" href="/src/dist/output.css">
+    <link rel="stylesheet" href="dist/output.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="font-body">
     <div class="container mx-auto py-10">
-        <div class="mx-6 bg-white px-10 py-10 shadow-lg flex flex-col-reverse md:flex-row justify-between"> 
+        <div class="mx-6 bg-white px-10 py-10 shadow-lg flex flex-col-reverse md:flex-row justify-between" style="font:bold;"> 
             <div class="w-full md:w-1/2 md:mt-28" data-aos="fade-right">
         <h2 class="font-bold text-2xl text-red-400 mb-4">Warning! Read This Immediately Before Walking Into Any Mattress Warehouse,Sales Outlet or Depot!!</h2>
         <p class="text-lg font-semibold text-gray-500 mb-4">The Life of Your Spouse, Parents, Siblings and Even Your Children Might Be At Risk… And It Probably Is Your Fault.</p>
