--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,7 @@
 </div>
 <div class="bg-white px-6 py-10 text-gray-500 shadow-lg mt-10 mx-3 text-lg rounded-lg text-justify" data-aos="fade-right">
 <h1 class="uppercase text-2xl text-gray-500 text-center mb-4 font-semibold">about me</h1>
-<img src="/src/img/20221126_084526.jpg" alt="" class="w-full h-48 object-cover mb-4 rounded-full">
+<img src="/src/20221126_084526.jpg" alt="" class="w-full h-48 object-cover mb-4 rounded-full">
 I’m Clement Onobun, a Market Development Representative for Mouka Ltd in EDO STATE… basically, my job is to make sure nobody falls prey anymore to these death beds disguised as mattresses.
  
 I’ve been working with Mouka LTD for the past 3 years, helping customers and everyday people navigate their mattress purchasing decision… from the type of mattresses they need to exactly where to get verified   Mouka products.
