--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="font-body">
-    <div class="container mx-auto py-10">
-        <div class="mx-3 bg-white px-6 py-10 shadow-lg flex flex-col-reverse md:flex-row justify-between" style="font:bold;"> 
+    <div class="container mx-auto py-4">
+        <div class="mx-3 bg-white px-6 py-4 shadow-lg flex flex-col-reverse md:flex-row justify-between" style="font:bold;"> 
             <div class="w-full md:w-1/2 md:mt-28" data-aos="fade-right">
         <h2 class="font-bold text-2xl text-red-400 mb-4">Warning! Read This Immediately Before Walking Into Any Mattress Warehouse,Sales Outlet or Depot!!</h2>
         <p class="text-lg font-semibold text-gray-500 mb-4">The Life of Your Spouse, Parents, Siblings and Even Your Children Might Be At Risk… And It Probably Is Your Fault.</p>
@@ -119,7 +119,7 @@
        </p>
          </span>
          </div>
-         <div class="mx-4 bg-red-400 px-10 py-4 text-white shadow-lg mt-10 mb-6 text-lg rounded-lg"><a href="https://www.manchestereveningnews.co.uk/news/uk-news/my-family-could-hear-scream-22798015" class="whitespace-normal underline">https://www.manchesterevening<br>news.co.uk/news/uk-news/my-family-could-hear-scream-22798015</a></div>
+         <div class="mx-4 px-10 py-4 mt-6 mb-6 text-lg"><a href="https://www.manchestereveningnews.co.uk/news/uk-news/my-family-could-hear-scream-22798015" class="underline text-blue-700">https://www.manchesterevening<br>news.co.uk/news/uk-news/my-family-could-hear-scream-22798015</a></div>
          
         <div class="px-6 pb-10 text-gray-600 mt-10 mx-3 text-lg indent-12 text-justify">
             <span data-aos="fade-right">
@@ -164,14 +164,16 @@ PS: Even if you’re not looking to get any mattress at the moment, I could help
  <br><br>
 PPS: You might not be getting a mattress doesn’t mean somebody you know is not in the market for one, you could help save a life… Again I’m Clement Onobun, Market Development Representative for Mouka LTD Edo State.</div>
 <div class="bg-black/75 text-white px-6 py-10 text-lg shadow-xl rounded-lg mx-3 mt-7" data-aos="fade-right">
-    <div class="flex gap-2 mt-4">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 8l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2M5 3a2 2 0 00-2 2v1c0 8.284 6.716 15 15 15h1a2 2 0 002-2v-3.28a1 1 0 00-.684-.948l-4.493-1.498a1 1 0 00-1.21.502l-1.13 2.257a11.042 11.042 0 01-5.516-5.517l2.257-1.128a1 1 0 00.502-1.21L9.228 3.683A1 1 0 008.279 3H5z"></path></svg>
-        +2348141638327
+    <div class="flex gap-2 mt-4 mb-3">
+        <svg class="w-6 h-6 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 8l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2M5 3a2 2 0 00-2 2v1c0 8.284 6.716 15 15 15h1a2 2 0 002-2v-3.28a1 1 0 00-.684-.948l-4.493-1.498a1 1 0 00-1.21.502l-1.13 2.257a11.042 11.042 0 01-5.516-5.517l2.257-1.128a1 1 0 00.502-1.21L9.228 3.683A1 1 0 008.279 3H5z"></path></svg>
+       <span class="text-black">+2348141638327</span>
         </div>
         <div class="flex gap-2 mb-3">
-<svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
-<span>onobuneseosa@gmail.com</span>
+<svg class="w-6 h-6 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
+<span class="text-black">onobuneseose@gmail.com</span>
 </div>
+
+<a href="https://wa.link/lkyajy" class="flex gap-2 text-black"><img src="/src/img/icons8-whatsapp.svg" alt="Whatsapp">Send a DM</a>
 </div>
 </div>
         </div>
